--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
 body{
-  background: #d9f0ff;
-background: linear-gradient(180deg, rgba(217, 240, 255, 1) 0%, rgba(56, 132, 255, 1) 100%);
+background: #b5e4ff;
+background: linear-gradient(180deg, rgba(181, 228, 255, 1) 0%, rgba(144, 165, 214, 1) 100%);
 }
