--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,8 @@
 body{
-background: #b5e4ff;
-/* Firefox */
-	background: -moz-linear-gradient(top, rgba(181, 228, 255, 1) 0%, rgba(144, 165, 214, 1) 100%);
-	/* Chrome , Safari */
-	background: -webkit-linear-gradient(top, rgba(181, 228, 255, 1) 0%, rgba(144, 165, 214, 1) 100%);
-
-background: linear-gradient(180deg, rgba(181, 228, 255, 1) 0%, rgba(144, 165, 214, 1) 100%);
+background: #d4eeff;
+background: -webkit-linear-gradient(180deg,rgba(212, 238, 255, 1) 0%, rgba(220, 219, 255, 1) 100%);
+background: -moz-linear-gradient(180deg,rgba(212, 238, 255, 1) 0%, rgba(220, 219, 255, 1) 100%);
+background: linear-gradient(180deg,rgba(212, 238, 255, 1) 0%, rgba(220, 219, 255, 1) 100%);
 }
 
 html {
