--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+	
+@import url(http://fonts.googleapis.com/earlyaccess/notosansjp.css);
 body{
 background: #d4eeff;
 background: -webkit-linear-gradient(180deg,rgba(212, 238, 255, 1) 0%, rgba(220, 219, 255, 1) 100%);
