--- a/css/main.css
+++ b/css/main.css
@@ -24,3 +24,19 @@ html {
 .smalltext{
     font-size: 3.44vw;
 }
+
+.map {
+    position: relative;
+    width: 100%;
+    padding-top: 66.66%%;
+    /* 16:9のアスペクト比 */
+    height: 0;
+}
+
+.map iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
